--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -40,7 +40,7 @@ header{
     font-family: 'Crimson Pro', serif;
     font-weight: 200;
     font-size: 14px;
-    transition: opacity,background-color .5s;
+    transition: background-color .5s,opacity .5s;
     cursor: pointer;
 }
 
